syntax = "proto3";

option go_package = "github.com/kiriyms/oms_go-common";

package api;

message Order {
    string ID = 1;
    string customerID = 2;
    string Status = 3;
    repeated Item Items = 4;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) return (Order);
}

message Item {
    string ID = 1;
    int32 Quantity = 2;
    string Name = 3;
    string PriceID = 4;
}

message ItemWithQuantity {
    string ID = 1;
    int32 Quantity = 2;
}

message CreateOrderRequest {
    string customerID = 1;
    repeated ItemWithQuantity Items = 2;
}
